fixes, header not aligned with rest of the content on larger screens

--- a/scss/_component.header.scss
+++ b/scss/_component.header.scss
@@ -11,7 +11,7 @@
   padding: ($base-vertical-spacing-unit * 2) $base-horizontal-spacing-unit;
 
   @include bp(medium) {
-    padding-right: $base-horizontal-spacing-unit;
-    padding-left: $base-horizontal-spacing-unit;
+    padding-right: ($base-horizontal-spacing-unit * 2);
+    padding-left: ($base-horizontal-spacing-unit * 2);
   }
 }
